fix: uat adjustments for topbond

--- a/accountability/views/employee_accountability.xml
+++ b/accountability/views/employee_accountability.xml
@@ -64,6 +64,7 @@
                         </page>
                         <page string="Remarks">
                             <field name="remarks" string="" placeholder="Type here" />
+                            <field name="attachment_ids" widget="many2many_binary" options="{'no_create': True}"/> 
                         </page>
                     
                     </notebook>
